src/App.css
/* .App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
} */
 body {
  margin: 0;
  font-family: Arial, sans-serif;
  background: linear-gradient(to right, #141e30, #243b55);
}

.app {
  text-align: center;
  padding: 50px;
  color: white;
}

h1 {
  margin-bottom: 20px;
}

textarea {
  width: 350px;
  height: 120px;
  padding: 10px;
  border-radius: 10px;
  border: none;
  outline: none;
}

button {
  display: block;
  margin: 15px auto;
  padding: 10px 20px;
  border-radius: 10px;
  border: none;
  background: #00c6ff;
  color: white;
  cursor: pointer;
  font-size: 16px;
}

button:hover {
  background: #0072ff;
}

.result {
  margin-top: 20px;
  padding: 15px;
  border-radius: 10px;
  width: 300px;
  margin-left: auto;
  margin-right: auto;
}

/* Risk colors */
.HIGH {
  background: #ff4d4d;
}

.MEDIUM {
  background: #ffa500;
}

.LOW {
  background: #28a745;
}

/* Meter */
.meter {
  height: 10px;
  background: #ddd;
  margin-top: 10px;
  border-radius: 5px;
  overflow: hidden;
}

.meter-fill {
  height: 100%;
  background: black;
}

